[package]
name = "parts"
version = "0.1.0"
authors = ["Diana"]
edition = "2018"
#
publish = false
license = "MIT OR Apache-2.0"
#
description = "A GPT Partition Manager"

[dependencies]
uuid = { version = "0.8.1", default-features = false }
crc = { version = "1.8.1", default-features = false }
generic-array = "0.13.2"
derive_more = "0.99.3"
displaydoc = { version = "0.1.5", default-features = false }
thiserror = { version = "1.0.11", optional = true }
serde = { version = "1.0.104", default-features = false, optional = true }
arrayvec = { version = "0.5.1", default-features = false }

[dev-dependencies]
static_assertions = "1.1.0"
anyhow = "1.0.26"
thiserror = "1.0.11"

[features]
default = ["std"]
# Enable support for various standard library types
std = [
    "thiserror",
    "uuid/std",
    "uuid/v4",
]
# Nightly is used for docs.
nightly = []

[package.metadata.docs.rs]
features = [
    "nightly",
]
