[package]
name = "parts"
version = "0.1.0"
authors = ["Diana"]
edition = "2018"
#
publish = false
license = "MIT OR Apache-2.0"
#
description = "A GPT Partition Manager"

[dependencies]
uuid = { version = "0.8.1", default-features = false }
crc = { version = "1.8.1", default-features = false }
derive_more = "0.99.3"
displaydoc = { version = "0.1.5", default-features = false }
thiserror = { version = "1.0.11", optional = true }
serde_crate = { package = "serde", version = "1.0.104", default-features = false, optional = true }
arrayvec = { version = "0.5.1", default-features = false }

[dev-dependencies]
static_assertions = "1.1.0"
anyhow = "1.0.26"
thiserror = "1.0.11"

[features]
default = ["std"]
# Enable support for various standard library types
std = [
    "thiserror",
    "uuid/std",
    "uuid/v4",
    # FIXME: Serde won't be able to handle Gpt<Vec> because the std feature is disabled
    # But enabling it here makes std depend on serde?
]
# Enable serde support
serde = [
    "serde_crate",
    "serde_crate/derive",
    "uuid/serde",
    "arrayvec/serde",
]
# Nightly is used for docs.
nightly = []

[package.metadata.docs.rs]
features = [
    "nightly",
]
