[package]
name = "parts"
version = "0.1.0"
authors = ["Diana"]
edition = "2018"
#
publish = false
license = "MIT OR Apache-2.0"
#
description = "A GPT Partition Manager"

[dependencies]
uuid = { version = "0.8.1", default-features = false }
crc = { version = "1.8.1", default-features = false }
derive_more = "0.99.7"
displaydoc = { version = "0.1.6", default-features = false }
thiserror = { version = "1.0.19", optional = true }
serde_crate = { package = "serde", version = "1.0.111", default-features = false, optional = true }
arrayvec = { version = "0.5.1", default-features = false }

[dev-dependencies]
static_assertions = "1.1.0"
anyhow = "1.0.31"
thiserror = "1.0.19"
pretty_assertions = "0.6.1"

[features]
default = ["std", "serde"]
# Enable support for various standard library types
std = [
    "thiserror",
    "uuid/std",
    "alloc",
]
# Alloc support
# NOTE: This brings in `getrandom`,
# which while no_std may lack an implementation for your embedded target
alloc = [
    "uuid/v4",
]
# Enable serde support
serde = [
    "serde_crate",
    "serde_crate/derive",
    "uuid/serde",
]
# Nightly is used for docs.
nightly = []

[package.metadata.docs.rs]
features = [
    "nightly",
]
targets = []
